# Kickmess

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _build.sh  _hear.sh  _run.sh  _test.sh
.github/workflows/: rust.yml
doc/: color_palette.xcf
examples/: baseview_femto_gui.rs  baseview_gui.rs  benchtest.rs  gui.rs  gui_test.rs  pugl_gui.rs
kickmess.lv2/: kickmess.ttl  manifest.ttl
lv2/kickmess.lv2/: kickmess.ttl
src/: baseview.rs  baseview_femtovg.rs  editor.rs  env.rs  filter.rs  helpers.rs  lfo.rs  lib.rs  log.rs  op_kickmess.rs  oscillator.rs  param_model.rs  plug_ui.rs  proc.rs  pugl.rs  ringbuf_shared.rs  window.rs
src/ui/: button.rs  constants.rs  draw_cache.rs  element.rs  graph.rs  mod.rs  painting.rs  protocol.rs  segmented_knob.rs  util.rs
