[package]
name        = "kickmessvst"
version     = "0.1.0"
authors     = ["Weird Constructor <weirdconstructor@gmail.com>"]
edition     = "2018"
license     = "GPL-3.0-or-later"
description = "Kickmess - Port of LMMS Kicker Plugin"

[lib]
name       = "kickmessvst"
crate-type = ["cdylib", "lib"]

[dependencies]
keyboard-types     = { version = "0.5.0", default-features = false }
raw-window-handle  = "0.3"
gl                 = "0.14.0"
glutin             = "0.24.1"
vst                = { git = "https://github.com/rustaudio/vst-rs" }
femtovg            = { git = "https://github.com/femtovg/femtovg" }
raw-gl-context     = { git = "https://github.com/glowcoil/raw-gl-context" }
#baseview           = { git = "https://github.com/RustAudio/baseview.git" }
baseview           = { path = "/home/weictr/devel/other/baseview" }
